tests/specs/check/check_node_builtin_modules/mod.js
// @ts-check
import fs from "node:fs";
const _data = fs.readFileSync("./node_builtin.js", 123);
